# hugging_face_ai_agents_course

./: .gitignore  .pre-commit-config.yaml  debug_agent.py  debug_search.py  pyproject.toml
hugging_face_ai_agent_course/: __init__.py
unit 2/: try_imge.py  unit2_1_1.py  unit_2_1.py
unit1/: GradioUI.py  __init__.py  dummy_ai_agent.py  first_smolagents.py
unit1/tools/: visit_webpage.py
