[project]
name = "hugging-face-ai-agent-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.0.0",
    "huggingface-hub>=1.8.0",
    "markdownify>=0.13.1",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "smolagents[gradio]>=1.22.0",
]

[project.scripts]
start = "hugging_face_ai_agent_course:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
